@startuml

title __CONTACTS's Class Diagram__\n

  namespace com.chrisjaunes.communication.client {
    namespace contacts {
      class com.chrisjaunes.communication.client.contacts.AddContactsFragment {
          + onActivityCreated()
          + onCreateView()
      }
    }
  }
  

  namespace com.chrisjaunes.communication.client {
    namespace contacts {
      class com.chrisjaunes.communication.client.contacts.ContactsViewModel {
          - newContactsListResult : MutableLiveData<List<String>>
          - nowContactsListResult : MutableLiveData<List<String>>
          - uniApiResult : MutableLiveData<UniApiResult<String>>
          + ContactsViewModel()
          + addContacts()
          + getNewContactsListResult()
          + getNowContactsListResult()
          + getUniApiResult()
          + handleRequestContacts()
          + queryLocalNewContactsList()
          + queryLocalNowContactsList()
          + queryServer()
          - updateContactsViewManage()
          - updateLocalDataBase()
      }
    }
  }
  

  namespace com.chrisjaunes.communication.client {
    namespace contacts {
      class com.chrisjaunes.communication.client.contacts.NewContactsAdapter {
          ~ contactsList : List<String>
          + NewContactsAdapter()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
          + setContactsStringList()
      }
    }
  }
  

  namespace com.chrisjaunes.communication.client {
    namespace contacts {
      interface com.chrisjaunes.communication.client.contacts.NewContactsAdapter.ItemOnClickListener {
          {abstract} + handleRequest()
      }
    }
  }
  

  namespace com.chrisjaunes.communication.client {
    namespace contacts {
      class com.chrisjaunes.communication.client.contacts.NewContactsAdapter.NowContactsViewHolder {
          ~ agree : Button
          ~ avatar : ImageView
          ~ nickName : TextView
          ~ reject : Button
          + NowContactsViewHolder()
      }
    }
  }
  

  namespace com.chrisjaunes.communication.client {
    namespace contacts {
      class com.chrisjaunes.communication.client.contacts.NewContactsFragment {
          + onActivityCreated()
          + onCreateView()
      }
    }
  }
  

  namespace com.chrisjaunes.communication.client {
    namespace contacts {
      class com.chrisjaunes.communication.client.contacts.NowContactsAdapter {
          - contactsList : List<String>
          + NowContactsAdapter()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
          + setContactsStringList()
      }
    }
  }
  

  namespace com.chrisjaunes.communication.client {
    namespace contacts {
      interface com.chrisjaunes.communication.client.contacts.NowContactsAdapter.ItemOnClickListener {
          {abstract} + goToTalk()
      }
    }
  }
  

  namespace com.chrisjaunes.communication.client {
    namespace contacts {
      class com.chrisjaunes.communication.client.contacts.NowContactsAdapter.NowContactsViewHolder {
          ~ avatar : ImageView
          ~ nickName : TextView
          + NowContactsViewHolder()
      }
    }
  }
  

  namespace com.chrisjaunes.communication.client {
    namespace contacts {
      class com.chrisjaunes.communication.client.contacts.NowContactsFragment {
          + onActivityCreated()
          + onCreateView()
      }
    }
  }
  

  com.chrisjaunes.communication.client.contacts.AddContactsFragment -up-|> androidx.fragment.app.Fragment
  com.chrisjaunes.communication.client.contacts.ContactsViewModel -up-|> androidx.lifecycle.ViewModel
  com.chrisjaunes.communication.client.contacts.ContactsViewModel o-- com.chrisjaunes.communication.client.contacts.model.ContactsDao : contactsDao
  com.chrisjaunes.communication.client.contacts.ContactsViewModel o-- com.chrisjaunes.communication.client.contacts.ContactsViewManage : contactsViewManage
  com.chrisjaunes.communication.client.contacts.NewContactsAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.chrisjaunes.communication.client.contacts.NewContactsAdapter o-- com.chrisjaunes.communication.client.contacts.ContactsViewManage : contactsViewManage
  com.chrisjaunes.communication.client.contacts.NewContactsAdapter o-- com.chrisjaunes.communication.client.contacts.NewContactsAdapter.ItemOnClickListener : itemOnClickListener
  com.chrisjaunes.communication.client.contacts.NewContactsAdapter +-down- com.chrisjaunes.communication.client.contacts.NewContactsAdapter.ItemOnClickListener
  com.chrisjaunes.communication.client.contacts.NewContactsAdapter +-down- com.chrisjaunes.communication.client.contacts.NewContactsAdapter.NowContactsViewHolder
  com.chrisjaunes.communication.client.contacts.NewContactsAdapter.NowContactsViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.chrisjaunes.communication.client.contacts.NewContactsFragment -up-|> androidx.fragment.app.Fragment
  com.chrisjaunes.communication.client.contacts.NowContactsAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.chrisjaunes.communication.client.contacts.NowContactsAdapter o-- com.chrisjaunes.communication.client.contacts.ContactsViewManage : contactsViewManage
  com.chrisjaunes.communication.client.contacts.NowContactsAdapter o-- com.chrisjaunes.communication.client.contacts.NowContactsAdapter.ItemOnClickListener : itemOnClickListener
  com.chrisjaunes.communication.client.contacts.NowContactsAdapter +-down- com.chrisjaunes.communication.client.contacts.NowContactsAdapter.ItemOnClickListener
  com.chrisjaunes.communication.client.contacts.NowContactsAdapter +-down- com.chrisjaunes.communication.client.contacts.NowContactsAdapter.NowContactsViewHolder
  com.chrisjaunes.communication.client.contacts.NowContactsAdapter.NowContactsViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.chrisjaunes.communication.client.contacts.NowContactsFragment -up-|> androidx.fragment.app.Fragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
